--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/aladin</item>
+        <item>@font/aldrich</item>
+        <item>@font/coda</item>
         <item>@font/short_stack</item>
     </array>
 </resources>
